# chronicle

./: Cargo.toml  Justfile  README.md  USAGE.md  default_config.toml  dist-workspace.toml
chronicle/: Cargo.toml  bulk.txt
chronicle-cli/: Cargo.toml
chronicle-cli/src/: args.rs  author.rs  bulk.rs  logging.rs  main.rs  table.rs  tag.rs  utils.rs  work.rs
chronicle-cli/wix/: main.wxs
chronicle/migrations/: 0001_initialize_db.sql  0002_author_aliases.sql  0003_tag_discriminators.sql
chronicle/src/: author.rs  http.rs  id.rs  import.rs  lib.rs  models.rs  parse.rs  record.rs  search.rs  tag.rs  test.rs  utils.rs
chronicle/src/import/: bsky.rs  tumblr.rs  twitter.rs
chronicle/src/models/: author.rs  tag.rs  work.rs
chronicle/src/search/: builder.rs  parse.rs
chronicle/src/tag/: parse.rs
chronicler/: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
chronicler/src-tauri/: Cargo.toml  tauri.conf.json
chronicler/src-tauri/src/: commands.rs  create.rs  lib.rs  main.rs
chronicler/src-tauri/src/commands/: tags.rs  works.rs
chronicler/src/lib/: search.svelte.ts  utils.ts
chronicler/src/lib/components/: AuthorEdit.svelte  SearchBar.svelte  TagDisplay.svelte  TagEntry.svelte  UrlImport.svelte  WorkDisplay.svelte  WorkEdit.svelte
chronicler/src/lib/types/: author.d.ts  tag.d.ts  work.d.ts
chronicler/src/routes/: +layout.svelte  +page.svelte
chronicler/src/routes/import/: +page.svelte
chronicler/src/routes/work/[work]/: +page.svelte  +page.ts
migrations/: 0001_initialize_db.sql  0002_author_aliases.sql
src/: author.rs  import.rs  lib.rs  main.rs  record.rs  search.rs  tag.rs
src/import/: bsky.rs
src/search/: builder.rs  parse.rs
