[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
directories = "5.0.1"
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "derive", "migrate", "uuid", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
atrium-xrpc-client = "0.5.10"
atrium-api = "0.24.9"
regex = "1.11.1"
reqwest = "0.12.12"
crc32fast = "1.4.2"
nom = "7.1.3"
shellwords = "1.1.0"
