[workspace]
members = ["chronicle", "chronicle-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/HazelTheWitch/chronicle"
authors = ["Hazel Rella <hazelrella11@gmail.com>"]
description = "Creative work archiver with an advanced tagging system"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
