[workspace]
members = ["chronicle", "chronicle-cli", "chronicler/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
repository = "https://github.com/HazelTheWitch/chronicle"
authors = ["Hazel Rella <hazelrella11@gmail.com>"]
description = "Creative work archiver with an advanced tagging system"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
