[package]
name = "chronicle-cli"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
chronicle = { path = "../chronicle" }
clap = { version = "4.5.24", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.5.0"
