[package]
name = "chronicle-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = { workspace = true }

[package.metadata.wix]
upgrade-guid = "01A74342-8B2D-4D9F-8E31-A840C5F18CFF"
path-guid = "BCD2DB88-2184-47D1-ACEB-4934C7FBB7C7"
license = false
eula = false

[[bin]]
name = "chronicle"
path = "src/main.rs"

[dependencies]
chronicle = { path = "../chronicle" }
clap = { version = "4.5.24", features = ["derive", "env", "string"] }
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.5.0"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19" }
url = "2.5.4"
uuid = "1.11.0"
directories = "5.0.1"
tracing-error = "0.2.1"
bytemuck = "1.21.0"
indicatif = "0.17.9"
console = "0.15.10"
dialoguer = "0.11.0"
async-channel = "2.3.1"
shellwords = "1.1.0"
