[package]
name = "chronicle"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
paste = "1"
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "migrate",
    "uuid",
    "chrono",
] }
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
atrium-xrpc-client = "0.5.10"
atrium-api = "0.24.9"
regex = "1.11.1"
reqwest = "0.12.12"
crc32fast = "1.4.2"
nom = "7.1.3"
bytemuck = "1.21.0"
thiserror = "2"
toml = "0.8.19"
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.85"
strum = { version = "0.26.3", features = ["derive"] }
shellexpand = "3.1.0"

[dev-dependencies]
tempfile = "3.15.0"
